--- a/package.json
+++ b/package.json
@@ -62,7 +62,9 @@
     "url": "^0.11.4",
     "webpack": "^5.95.0",
     "webpack-cli": "^5.1.4",
-    "wrapper-webpack-plugin": "^2.2.0"
+    "wrapper-webpack-plugin": "^2.2.0",
+    "npm-audit": "^7.0.0",
+    "snyk": "^1.0.0"
   },
   "private": true,
   "scripts": {
@@ -101,7 +103,8 @@
     "test:jest:watch": "jest --watch",
     "tsc": "tsc",
     "webpack": "webpack",
-    "prettier": "prettier --write ."
+    "prettier": "prettier --write .",
+    "security-scans": "npm audit && snyk test"
   },
   "license": "MIT",
   "author": "Electron Community",
