--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -66,3 +66,19 @@ updates:
       - "backport-check-skip"
     open-pull-requests-limit: 0
     target-branch: 30-x-y
+  - package-ecosystem: npm
+    directories:
+      - /
+      - /spec
+      - /npm
+    schedule:
+      interval: daily
+    labels:
+      - "no-backport"
+    open-pull-requests-limit: 2
+    target-branch: main
+    ignore:
+      - dependency-name: "express"
+        versions: ["<0.7.0"]
+      - dependency-name: "cookie"
+        versions: ["<0.7.0"]
