--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "eslint-plugin-standard": "^5.0.0",
     "eslint-plugin-unicorn": "^56.0.0",
     "events": "^3.2.0",
+    "express": "^4.21.0",
     "folder-hash": "^2.1.1",
     "got": "^11.8.5",
     "husky": "^8.0.1",
